@@ -265,6 +265,8 @@ public class ConfigurationDefaults {
     def.put( "Popup File Finished", FALSE);
     def.put( "Popup Download Added", FALSE);
     def.put( "Show Timestamp For Alerts", FALSE);
+    def.put( "Use Message Box For Popups", FALSE);
+    def.put( "Suppress Alerts", FALSE);
     
     //default torrent directory option
     def.put( "Save Torrent Files", TRUE );
