@@ -3,7 +3,8 @@ AZUREUS CHANGELOG
 
 2007.02.xx | Azureus 3.0.0.7
 
-
+FEATURE: Core | Alerts can now be shown in individual message popup boxes [amc1]
+FEATURE: Core | Alerts can now be suppressed and shown on demand [amc1]
 
 2007.01.22 | Azureus 2.5.0.4 / 3.0.0.6
 
